// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingUpForm disable email input and display loading on the button while loading 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-disabled"
                data-test-id="email"
                data-testid="email"
                disabled=""
                form="[object Object]"
                name="email"
                placeholder="Email"
                type="email"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-end"
    >
      <div
        class="ant-col"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-loading"
          data-testid="submit"
          disabled=""
          type="submit"
        >
          <span
            class="ant-btn-loading-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
          <span>
            Sign up
          </span>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SingUpForm renders the form 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-col-24 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input"
                data-test-id="email"
                data-testid="email"
                form="[object Object]"
                name="email"
                placeholder="Email"
                type="email"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-end"
    >
      <div
        class="ant-col"
      >
        <button
          class="ant-btn ant-btn-primary"
          data-testid="submit"
          disabled=""
          type="submit"
        >
          <span>
            Sign up
          </span>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
